force-app/main/default/objects/PostingLineItem__c/PostingLineItem__c.object-meta.xml
<CustomObject>
    <description>Posting Line Items - collection of Journal Line Items</description>
    <label>PostingLineItem</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PostingLineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>