force-app/main/default/objects/PostingLineItem__c/fields/MonthlyPostingSummary__c.field-meta.xml
<CustomField>
    <fullName>MonthlyPostingSummary__c</fullName>
    <label>MonthlyPostingSummary</label>
    <referenceTo>MonthlyPostingSummary__c</referenceTo>
    <relationshipLabel>PostingLineItems</relationshipLabel>
    <relationshipName>PostingLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>