force-app/main/default/objects/PostingLineItem__c/fields/PLI_Amount__c.field-meta.xml
<CustomField>
    <fullName>PLI_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>