force-app/main/default/objects/PostingLineItem__c/fields/PLI_Corporate_Code__c.field-meta.xml
<CustomField>
    <fullName>PLI_Corporate_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Corporate Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>