force-app/main/default/objects/PostingLineItem__c/fields/PLI_Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>PLI_Cost_Centre__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Centre</label>
    <length>30</length>
    <type>Text</type>
</CustomField>