force-app/main/default/objects/PostingLineItem__c/fields/PLI_Cr_Dr__c.field-meta.xml
<CustomField>
    <fullName>PLI_Cr_Dr__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cr/Dr</label>
    <length>50</length>
    <type>Text</type>
</CustomField>