force-app/main/default/objects/PostingLineItem__c/fields/PLI_Description__c.field-meta.xml
<CustomField>
    <fullName>PLI_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>