force-app/main/default/objects/PostingLineItem__c/fields/PLI_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>PLI_GL_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GL Account</label>
    <length>30</length>
    <type>Text</type>
</CustomField>