force-app/main/default/objects/PostingLineItem__c/fields/PLI_ProdName__c.field-meta.xml
<CustomField>
    <fullName>PLI_ProdName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>